# facial-recognition

./: .gitignore  README.md  dataset.py  demo.py  hello.py  loss.py  main.py  model.py  pyproject.toml  test.py  train.py
scripts/: common.py  test.py  train.py
utils/: preprocess_lfw.py
